syntax = "proto3";

message WebAppConfigs {

    message MainMenu {
        bool countryAndLanguage = 1;
        bool pairing = 2;
        bool communication = 3;
        bool powerControl = 4;
        bool deviceManager = 5;
        bool maintenance = 6;
        bool information = 7;
        bool siteConfiguration = 8;
        bool status = 9;
        bool gridProtection = 10;
    }

    MainMenu mainMenu = 1;
    int32 language = 2;
}